--- a/app/data/posts/hello-again.mdx
+++ b/app/data/posts/hello-again.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Hello! (Again)"
-publishedAt: "2021-02-16"
+publishedAt: "2024-05-21"
 summary: "I stopped blogging a long time ago (9 years), it's time to fix it!"
 image: "/static/images/hello-again/hola.jpg"
 ---
@@ -17,7 +17,7 @@ image: "/static/images/hello-again/hola.jpg"
 
 I started blogging a long time ago (June 2004 to be precise, I am old!), but I stopped in 2012 because, well, life got complicated:
 
-- I worked for NBC, BBC, PWC, Bookatable... I was prety busy! 👨🏻‍💻
+- I worked for NBC, BBC, PWC, Bookatable, 10X Banking... I was prety busy! 👨🏻‍💻
 - I got engaged 💍
 - I got married 💒
 - I moved from Drupal to React / React Native ⚛️
@@ -33,5 +33,3 @@ Another reason to start again is to use the tools I use at work for my personal 
 Last, but not least, I wanted to start wrting more in English. After +10 years in the UK my English is so much better, but I want to get better at 'not-work' English, and writing your blog in English seems like the perfect way to do that (although I'll write a lot of technical stuff too, I guess)
 
 So yeah, I'm back baby!
-
-PS: I used [Lee Robinson's fantastic codebase](https://github.com/leerob/leerob.io) as the fundation for all this. Please check his [YouTube channel](https://www.youtube.com/channel/UCZMli3czZnd1uoc1ShTouQw) as well! Thanks Lee!
